Grid Class added
MAXROWS=65536*2
MAXCOLS=512